kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arch-homework
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arch-homework
  template:
    metadata:
      labels:
        app: arch-homework
    spec:
      containers:
        - name: arch-homework
          image: yarser/arch-homework:latest
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          ports:
            - containerPort: 8000
