kubernetes/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: arch-homework
spec:
  type: ClusterIP
  selector:
    app: arch-homework
  ports:
    - port: 8000
      targetPort: 80
